manifests/hello-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
  namespace: hello-space
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: hello-world
